# blagnac

./: .gitignore  Dockerfile  app.py  docker-compose.yml  draft.sql  main.py  pyproject.toml  requirements.txt  scrape.py  scrape_history.py
.streamlit/: secrets.toml
blagnacoscope/backend/: scrape.py  scrape_history.py
blagnacoscope/frontend/pages/: 1_Data_exploration_&_filtering.py
blagnacoscope/frontend/utils/: __init__.py
data/: aircraft.json  airlines.json  airports.json  generate_aircraft_airlines_airports_json.py
streamlit/: Data_exploration.py  Introduction.py
streamlit/pages/: 1_Data_exploration_&_filtering.py  2_Airports,_Airlines,_Aircraft.py  2_Takeoffs_&_Landings.py  3_Runway_direction.py  999_Stack_Monitoring.py
streamlit/utils/: __init__.py
