[tool.poetry]
name = "blagnacoscope"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flightradarapi = "^1.3.24"
geopandas = "^0.14.1"
osmnx = "^1.8.0"
pandas = {extras = ["html"], version = "^2.1.4"}
pyproj = "^3.6.1"
pytz = "^2023.3.post1"
scipy = "^1.11.4"
shapely = "^2.0.2"
sqlalchemy = "^2.0.24"
streamlit = "^1.29.0"
streamlit-extras = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
